[package]
name = "nebula-shield"
version = "0.1.0"
description = "Nebula DEX — Standalone MEV/JIT/arb protection program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nebula_shield"
doctest = false

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "=0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "=0.32.1" }

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
overflow-checks = true
